--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "models": {
         "tts": {
             "model": "tts-1",
-            "voice": "onyx"
+            "voice": "echo"
         },
         "stt": {
             "model": "medium"
