fix: rename sound to wake-word-detected.mp3

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
             "voice": "nova"
         },
         "stt": {
-            "model": "large-v3"
+            "model": "medium"
         },
         "ai": "gpt-4o"
     },
